language/tests/error/InvalidAssignmentInBlock.hashem
bebin double(x) {
  bede 2 * x;
}

bebin main() {
  double(2) = 4;
}